--- a/index.html
+++ b/index.html
@@ -14,17 +14,17 @@
     <section
         class="relative overflow-hidden bg-[url('../img/assets/bg1.png')] bg-cover bg-center h-screen flex justify-center items-center">
 
-        <img src="../img/assets/clouds/9.png" class="cloud absolute w-96 top-1 left-10" data-aos="fade-right"
+        <img src="../img/clouds/9.png" class="cloud absolute w-96 top-1 left-10" data-aos="fade-right"
             data-aos-duration="3000" data-aos-anchor-placement="top-bottom">
-        <img src="../img/assets/clouds/10.png" class="cloud absolute w-80 top-1 right-0" data-aos="fade-left"
+        <img src="../img/clouds/10.png" class="cloud absolute w-80 top-1 right-0" data-aos="fade-left"
             data-aos-duration="3000" data-aos-anchor-placement="top-bottom">
-        <img src="../img/assets/clouds/11.png" class="cloud absolute w-48 top-60 left-5" data-aos="fade-right"
+        <img src="../img/clouds/11.png" class="cloud absolute w-48 top-60 left-5" data-aos="fade-right"
             data-aos-duration="3000" data-aos-anchor-placement="top-bottom">
-        <img src="../img/assets/clouds/12.png" class="cloud absolute w-96 top-72 right-16" data-aos="fade-left"
+        <img src="../img/clouds/12.png" class="cloud absolute w-96 top-72 right-16" data-aos="fade-left"
             data-aos-duration="3000" data-aos-anchor-placement="top-bottom">
-        <img src="../img/assets/clouds/13.png" class="cloud absolute w-72 bottom-10 right-10" data-aos="fade-left"
+        <img src="../img/clouds/13.png" class="cloud absolute w-72 bottom-10 right-10" data-aos="fade-left"
             data-aos-duration="3000" data-aos-anchor-placement="top-bottom">
-        <img src="../img/assets/clouds/9.png" class="cloud absolute w-80 bottom-7 left-20" data-aos="fade-right"
+        <img src="../img/clouds/9.png" class="cloud absolute w-80 bottom-7 left-20" data-aos="fade-right"
             data-aos-duration="3000" data-aos-anchor-placement="top-bottom">
 
         <div class="flex flex-col items-center">
