--- a/index.html
+++ b/index.html
@@ -14,18 +14,18 @@
     <section
         class="relative overflow-hidden bg-[url('../img/assets/bg1.png')] bg-cover bg-center h-screen flex justify-center items-center">
 
-        <img src="img/ulap/9.png" class="cloud absolute w-96 top-1 left-10" data-aos="fade-right"
+        <img src="img/ulap/9.png" class="cloud absolute md:w-96 max-md:w-40 top-1 md:left-10 max-md:left-2"
+            data-aos="fade-right" data-aos-duration="3000" data-aos-anchor-placement="top-bottom">
+        <img src="img/ulap/10.png" class="cloud absolute md:w-80 max-md:w-36 top-1 right-0" data-aos="fade-left"
             data-aos-duration="3000" data-aos-anchor-placement="top-bottom">
-        <img src="img/ulap/10.png" class="cloud absolute w-80 top-1 right-0" data-aos="fade-left"
+        <img src="img/ulap/11.png" class="cloud absolute md:w-48 max-md:w-28 top-60 left-5" data-aos="fade-right"
             data-aos-duration="3000" data-aos-anchor-placement="top-bottom">
-        <img src="img/ulap/11.png" class="cloud absolute w-48 top-60 left-5" data-aos="fade-right"
+        <img src="img/ulap/12.png" class="cloud absolute md:w-96 max-md:w-40 top-72 right-16" data-aos="fade-left"
             data-aos-duration="3000" data-aos-anchor-placement="top-bottom">
-        <img src="img/ulap/12.png" class="cloud absolute w-96 top-72 right-16" data-aos="fade-left"
+        <img src="img/ulap/13.png" class="cloud absolute md:w-72 max-md:w-36 bottom-10 right-10" data-aos="fade-left"
             data-aos-duration="3000" data-aos-anchor-placement="top-bottom">
-        <img src="img/ulap/13.png" class="cloud absolute w-72 bottom-10 right-10" data-aos="fade-left"
-            data-aos-duration="3000" data-aos-anchor-placement="top-bottom">
-        <img src="img/ulap/9.png" class="cloud absolute w-80 bottom-7 left-20" data-aos="fade-right"
-            data-aos-duration="3000" data-aos-anchor-placement="top-bottom">
+        <img src="img/ulap/9.png" class="cloud absolute md:w-80 max-md:w-42 bottom-7 md:left-20 max-md:-left-5"
+            data-aos="fade-right" data-aos-duration="3000" data-aos-anchor-placement="top-bottom">
 
         <div class="flex flex-col items-center">
             <div class="relative text-2xl" data-aos="flip-down" data-aos-duration="800">
@@ -38,8 +38,8 @@
                     </text>
                 </svg>
             </div>
-            <div class="font-extrabold font-cursive text-7xl" data-aos="zoom-in" data-aos-duration="1000"
-                data-aos-delay="500">
+            <div class="font-extrabold font-cursive md:text-7xl max-md:text-3xl" data-aos="zoom-in"
+                data-aos-duration="1000" data-aos-delay="500">
                 Anya's Christening
             </div>
             <img src="img/3.png" class="w-96 mt-5" id="main-image" data-aos="fade-up" data-aos-duration="1500"
