--- a/index.html
+++ b/index.html
@@ -16,15 +16,16 @@
 
         <img src="img/ulap/9.png" class="cloud absolute md:w-96 max-md:w-40 top-1 md:left-10 max-md:left-2"
             data-aos="fade-right" data-aos-duration="3000" data-aos-anchor-placement="top-bottom">
-        <img src="img/ulap/10.png" class="cloud absolute md:w-80 max-md:w-36 top-1 right-0" data-aos="fade-left"
-            data-aos-duration="3000" data-aos-anchor-placement="top-bottom">
+        <img src="img/ulap/10.png" class="cloud absolute md:w-80 max-md:w-36 md:top-1 max-md:top-20 right-0"
+            data-aos="fade-left" data-aos-duration="3000" data-aos-anchor-placement="top-bottom">
         <img src="img/ulap/11.png" class="cloud absolute md:w-48 max-md:w-28 top-60 left-5" data-aos="fade-right"
             data-aos-duration="3000" data-aos-anchor-placement="top-bottom">
         <img src="img/ulap/12.png" class="cloud absolute md:w-96 max-md:w-40 top-72 right-16" data-aos="fade-left"
             data-aos-duration="3000" data-aos-anchor-placement="top-bottom">
         <img src="img/ulap/13.png" class="cloud absolute md:w-72 max-md:w-36 bottom-10 right-10" data-aos="fade-left"
             data-aos-duration="3000" data-aos-anchor-placement="top-bottom">
-        <img src="img/ulap/9.png" class="cloud absolute md:w-80 max-md:w-42 bottom-7 md:left-20 max-md:-left-5"
+        <img src="img/ulap/9.png"
+            class="cloud absolute md:w-80 max-md:w-42 md:bottom-7 max-md:bottom-32 md:left-20 max-md:-left-5"
             data-aos="fade-right" data-aos-duration="3000" data-aos-anchor-placement="top-bottom">
 
         <div class="flex flex-col items-center">
@@ -45,6 +46,9 @@
             <img src="img/3.png" class="w-96 mt-5" id="main-image" data-aos="fade-up" data-aos-duration="1500"
                 data-aos-delay="1000">
         </div>
+    </section>
+    <section class="relative overflow-hidden bg-cover bg-center h-screen flex justify-center items-center">
+
     </section>
 
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
