--- a/index.html
+++ b/index.html
@@ -47,31 +47,32 @@
                 data-aos-delay="1000">
         </div>
     </section>
+
     <section
-        class="relative overflow-hidden bg-cover bg-center md:h-screen max-md:h-full grid md:grid-cols-2 max-md:grid-cols-1 justify-center items-center">
+        class="relative overflow-hidden bg-cover bg-center lg:h-screen max-lg:h-full grid lg:grid-cols-2 max-lg:grid-cols-1 justify-center items-center">
         <div
-            class="md:bg-[url('../img/section1.jpg')] md:bg-cover md:bg-center h-full max-md:flex max-md:justify-center max-md:p-10">
-            <img src="img/section1.jpg" alt="" class="z-20 md:hidden max-md:block bg-center w-96 rounded-2xl">
+            class="lg:bg-[url('../img/section1.jpg')] lg:bg-cover lg:bg-center h-full max-lg:flex max-lg:justify-center max-lg:p-10">
+            <img src="img/section1.jpg" alt="" class="z-20 lg:hidden max-lg:block bg-center w-96 rounded-2xl">
         </div>
         <div class="flex justify-center items-center h-full flex-col gap-5">
             <div class="font-extrabold md:text-5xl max-md:text-3xl text-center" data-aos="fade-down"
                 data-aos-duration="1500">
                 Event Details
             </div>
-            <div class="flex justify-center md:p-10 max-md:p-16 max-md:pt-0 gap-10 max-md:flex-col max-md:items-center">
-                <div class="flex flex-col md:w-[25%] max-md:w-full gap-1 items-center text-center" data-aos="fade-in"
+            <div class="flex justify-center md:p-10 max-md:p-16 max-md:pt-0 gap-0 max-md:flex-col max-md:items-center">
+                <div class="flex flex-col md:w-[30%] max-md:w-full gap-1 items-center text-center" data-aos="fade-in"
                     data-aos-duration="2000" data-aos-delay="300">
                     <img src="img/assets/events/calendar.png" alt="" class="rounded-2xl max-md:w-1/2">
                     <span class="font-extrabold text-lg">December 07, 2025</span>
-                    Saturday
+                    Sunday
                 </div>
-                <div class="flex flex-col md:w-[25%] max-md:w-full gap-1 items-center text-center" data-aos="fade-in"
+                <div class="flex flex-col md:w-[30%] max-md:w-full gap-1 items-center text-center" data-aos="fade-in"
                     data-aos-duration="2000" data-aos-delay="600">
                     <img src="img/assets/events/church.png" alt="" class="rounded-2xl max-md:w-1/2">
                     <span class="font-extrabold text-lg">Holy Cross Parish - Amparo</span>
                     Mangga corner Macabud Streets, Amparo Village, Caloocan, Philippines
                 </div>
-                <div class="flex flex-col md:w-[25%] max-md:w-full gap-1 items-center text-center" data-aos="fade-in"
+                <div class="flex flex-col md:w-[30%] max-md:w-full gap-1 items-center text-center" data-aos="fade-in"
                     data-aos-duration="2000" data-aos-delay="900">
                     <img src="img/assets/events/utensils.png" alt="" class="rounded-2xl max-md:w-1/2">
                     <span class="font-extrabold text-lg">Trish Ville Private Resort</span>
@@ -82,29 +83,75 @@
     </section>
 
     <section
-        class="relative overflow-hidden bg-[url('../img/assets/bg1.png')] bg-cover bg-center h-screen flex justify-center items-center">
+        class="relative overflow-hidden bg-[url('../img/assets/bg1.png')] bg-cover bg-center lg:h-screen max-lg:h-full p-10 flex justify-center items-center flex-col gap-10">
         <div class="font-extrabold md:text-5xl max-md:text-3xl" data-aos="fade-down" data-aos-duration="1500">
-            (still working on this one...)
+            Dress Code
+        </div>
+        <p class="md:text-2xl max-md:text-lg text-center" data-aos="fade-in" data-aos-duration="1500"
+            data-aos-delay="500">
+            We humbly request that you wear comfortable white clothing. <br>
+            Please avoid wearing dark colored top.
+        </p>
+        <div class="flex items-center justify-center flex-wrap max-md:gap-5">
+            <img src="img\assets\clothes\1.png" alt="" class="md:w-52 max-md:w-36" data-aos="zoom-in-up"
+                data-aos-duration="1500" data-aos-delay="">
+            <img src="img\assets\clothes\7.png" alt="" class="md:w-52 max-md:w-36" data-aos="zoom-in-up"
+                data-aos-duration="1500" data-aos-delay="100">
+            <img src="img\assets\clothes\3.png" alt="" class="md:w-52 max-md:w-36" data-aos="zoom-in-up"
+                data-aos-duration="1500" data-aos-delay="200">
+            <img src="img\assets\clothes\8.png" alt="" class="md:w-52 max-md:w-36" data-aos="zoom-in-up"
+                data-aos-duration="1500" data-aos-delay="300">
+            <img src="img\assets\clothes\5.png" alt="" class="md:w-52 max-md:w-36" data-aos="zoom-in-up"
+                data-aos-duration="1500" data-aos-delay="400">
+            <img src="img\assets\clothes\6.png" alt="" class="md:w-52 max-md:w-36" data-aos="zoom-in-up"
+                data-aos-duration="1500" data-aos-delay="500">
+            <img src="img\assets\clothes\2.png" alt="" class="md:w-52 max-md:w-36" data-aos="zoom-in-up"
+                data-aos-duration="1500" data-aos-delay="600">
+            <img src="img\assets\clothes\4.png" alt="" class="md:w-52 max-md:w-36" data-aos="zoom-in-up"
+                data-aos-duration="1500" data-aos-delay="700">
         </div>
     </section>
 
     <section
-        class="relative overflow-hidden bg-cover bg-center md:h-screen max-md:h-full grid md:grid-cols-2 max-md:grid-cols-1 justify-center items-center">
-        <div class="flex justify-center items-center h-full flex-col gap-5">
+        class="relative overflow-hidden bg-cover bg-center lg:h-screen max-lg:h-full grid lg:grid-cols-2 max-lg:grid-cols-1 justify-center items-center">
+        <div class="flex justify-center items-center h-full flex-col gap-5 max-lg:order-2">
             <div class="font-extrabold md:text-5xl max-md:text-3xl text-center" data-aos="fade-down"
                 data-aos-duration="1500">
                 Gift Guides
-                <br>
-                (still working on this one...)
             </div>
-            <div class="flex justify-center md:p-10 max-md:p-16 max-md:pt-0 gap-10 max-md:flex-col max-md:items-center">
-
+            <p class="md:text-2xl max-md:text-lg text-center px-10" data-aos="fade-in" data-aos-duration="1500"
+                data-aos-delay="500">
+                Your prayers and presence are all that we request. But if you desire to give nonetheless, these are the
+                things that we would appreciate.
+            </p>
+            <div class="flex justify-center md:p-10 max-md:p-16 max-md:pt-0 gap-0 max-md:flex-col max-md:items-center">
+                <div class="flex flex-col md:w-[25%] max-md:w-full gap-1 items-center text-center" data-aos="fade-in"
+                    data-aos-duration="2000" data-aos-delay="300">
+                    <img src="img\assets\gifts\9.png" alt="" class="rounded-2xl max-md:w-1/2">
+                    <span class="font-extrabold text-lg">Learning Books</span>
+                </div>
+                <div class="flex flex-col md:w-[25%] max-md:w-full gap-1 items-center text-center" data-aos="fade-in"
+                    data-aos-duration="2000" data-aos-delay="600">
+                    <img src="img/assets/gifts/10.png" alt="" class="rounded-2xl max-md:w-1/2">
+                    <span class="font-extrabold text-lg">Educational Toys</span>
+                </div>
+                <div class="flex flex-col md:w-[25%] max-md:w-full gap-1 items-center text-center" data-aos="fade-in"
+                    data-aos-duration="2000" data-aos-delay="900">
+                    <img src="img/assets/gifts/11.png" alt="" class="rounded-2xl max-md:w-1/2">
+                    <span class="font-extrabold text-lg">Clothers for 12 months up</span>
+                </div>
+                <div class="flex flex-col md:w-[25%] max-md:w-full gap-1 items-center text-center" data-aos="fade-in"
+                    data-aos-duration="2000" data-aos-delay="900">
+                    <img src="img/assets/gifts/12.png" alt="" class="rounded-2xl max-md:w-1/2">
+                    <span class="font-extrabold text-lg">MONETARY GIFT</span>
+                </div>
             </div>
         </div>
         <div
-            class="md:bg-[url('../img/section2.jpg')] md:bg-cover md:bg-center h-full max-md:flex max-md:justify-center max-md:p-10">
-            <img src="img/section2.jpg" alt="" class="z-20 md:hidden max-md:block bg-center w-96 rounded-2xl">
+            class="lg:bg-[url('../img/section2.jpg')] lg:bg-cover lg:bg-center h-full max-lg:flex max-lg:justify-center max-lg:p-10  max-lg:order-1">
+            <img src="img/section2.jpg" alt="" class="z-20 lg:hidden max-lg:block bg-center w-96 rounded-2xl">
         </div>
+
     </section>
 
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
