--- a/index.html
+++ b/index.html
@@ -14,18 +14,20 @@
     <section
         class="relative overflow-hidden bg-[url('../img/assets/bg1.png')] bg-cover bg-center h-screen flex justify-center items-center">
 
-        <img src="img/ulap/9.png" class="cloud absolute md:w-96 max-md:w-40 top-1 md:left-10 max-md:left-2"
+        <img loading="lazy" src="img/ulap/9.png"
+            class="cloud absolute md:w-96 max-md:w-40 top-1 md:left-10 max-md:left-2" data-aos="fade-right"
+            data-aos-duration="3000">
+        <img loading="lazy" src="img/ulap/10.png"
+            class="cloud absolute md:w-80 max-md:w-36 md:top-1 max-md:top-20 right-0" data-aos="fade-left"
+            data-aos-duration="3000">
+        <img loading="lazy" src="img/ulap/11.png" class="cloud absolute md:w-48 max-md:w-28 top-60 left-5"
             data-aos="fade-right" data-aos-duration="3000">
-        <img src="img/ulap/10.png" class="cloud absolute md:w-80 max-md:w-36 md:top-1 max-md:top-20 right-0"
+        <img loading="lazy" src="img/ulap/12.png" class="cloud absolute md:w-96 max-md:w-40 top-72 right-16"
             data-aos="fade-left" data-aos-duration="3000">
-        <img src="img/ulap/11.png" class="cloud absolute md:w-48 max-md:w-28 top-60 left-5" data-aos="fade-right"
-            data-aos-duration="3000">
-        <img src="img/ulap/12.png" class="cloud absolute md:w-96 max-md:w-40 top-72 right-16" data-aos="fade-left"
-            data-aos-duration="3000">
-        <img src="img/ulap/13.png" class="cloud absolute md:w-72 max-md:w-36 bottom-10 right-10" data-aos="fade-left"
-            data-aos-duration="3000">
-        <img src="img/ulap/9.png"
-            class="cloud absolute md:w-80 max-md:w-42 md:bottom-7 max-md:bottom-32 md:left-20 max-md:-left-5"
+        <img loading="lazy" src="img/ulap/13.png" class="cloud absolute md:w-72 max-md:w-36 bottom-10 right-10"
+            data-aos="fade-left" data-aos-duration="3000">
+        <img loading="lazy" src="img/ulap/9.png"
+            class="cloud absolute md:w-80 max-md:w-42 md:bottom-26 max-md:bottom-32 md:left-20 max-md:-left-5"
             data-aos="fade-right" data-aos-duration="3000">
 
         <div class="flex flex-col items-center">
@@ -43,8 +45,8 @@
                 data-aos-delay="500">
                 Anya's Christening
             </div>
-            <img src="img/3.png" class="w-96 mt-5" id="main-image" data-aos="fade-up" data-aos-duration="1500"
-                data-aos-delay="1000">
+            <img loading="lazy" src="img/3.png" class="w-96 mt-5" id="main-image" data-aos="fade-up"
+                data-aos-duration="1500" data-aos-delay="1000">
         </div>
     </section>
 
@@ -52,7 +54,8 @@
         class="relative overflow-hidden bg-cover bg-center lg:h-screen max-lg:h-full grid lg:grid-cols-2 max-lg:grid-cols-1 justify-center items-center">
         <div
             class="lg:bg-[url('../img/section1.jpg')] lg:bg-cover lg:bg-center h-full max-lg:flex max-lg:justify-center max-lg:p-10">
-            <img src="img/section1.jpg" alt="" class="z-20 lg:hidden max-lg:block bg-center w-96 rounded-2xl">
+            <img loading="lazy" src="img/section1.jpg" alt=""
+                class="z-20 lg:hidden max-lg:block bg-center w-96 rounded-2xl">
         </div>
         <div class="flex justify-center items-center h-full flex-col gap-5">
             <div class="font-extrabold md:text-5xl max-md:text-3xl text-center" data-aos="fade-down"
@@ -62,19 +65,19 @@
             <div class="flex justify-center md:p-10 max-md:p-16 max-md:pt-0 gap-0 max-md:flex-col max-md:items-center">
                 <div class="flex flex-col md:w-[30%] max-md:w-full gap-1 items-center text-center" data-aos="fade-in"
                     data-aos-duration="2000" data-aos-delay="300">
-                    <img src="img/assets/events/calendar.png" alt="" class="rounded-2xl max-md:w-1/2">
+                    <img loading="lazy" src="img/assets/events/calendar.png" alt="" class="rounded-2xl max-md:w-1/2">
                     <span class="font-extrabold text-lg">December 07, 2025</span>
                     Sunday
                 </div>
                 <div class="flex flex-col md:w-[30%] max-md:w-full gap-1 items-center text-center" data-aos="fade-in"
                     data-aos-duration="2000" data-aos-delay="600">
-                    <img src="img/assets/events/church.png" alt="" class="rounded-2xl max-md:w-1/2">
+                    <img loading="lazy" src="img/assets/events/church.png" alt="" class="rounded-2xl max-md:w-1/2">
                     <span class="font-extrabold text-lg">Holy Cross Parish - Amparo</span>
                     Mangga corner Macabud Streets, Amparo Village, Caloocan, Philippines
                 </div>
                 <div class="flex flex-col md:w-[30%] max-md:w-full gap-1 items-center text-center" data-aos="fade-in"
                     data-aos-duration="2000" data-aos-delay="900">
-                    <img src="img/assets/events/utensils.png" alt="" class="rounded-2xl max-md:w-1/2">
+                    <img loading="lazy" src="img/assets/events/utensils.png" alt="" class="rounded-2xl max-md:w-1/2">
                     <span class="font-extrabold text-lg">Trish Ville Private Resort</span>
                     Amparo Subd, Lot 11 Banaba, Caloocan, Metro Manila
                 </div>
@@ -93,21 +96,21 @@
             Please avoid wearing dark colored top.
         </p>
         <div class="flex items-center justify-center flex-wrap max-md:gap-5">
-            <img src="img\assets\clothes\1.png" alt="" class="md:w-52 max-md:w-36" data-aos="zoom-in-up"
+            <img loading="lazy" src="img\assets\clothes\1.png" alt="" class="md:w-52 max-md:w-36" data-aos="zoom-in-up"
                 data-aos-duration="1500" data-aos-delay="">
-            <img src="img\assets\clothes\7.png" alt="" class="md:w-52 max-md:w-36" data-aos="zoom-in-up"
+            <img loading="lazy" src="img\assets\clothes\7.png" alt="" class="md:w-52 max-md:w-36" data-aos="zoom-in-up"
                 data-aos-duration="1500" data-aos-delay="100">
-            <img src="img\assets\clothes\3.png" alt="" class="md:w-52 max-md:w-36" data-aos="zoom-in-up"
+            <img loading="lazy" src="img\assets\clothes\3.png" alt="" class="md:w-52 max-md:w-36" data-aos="zoom-in-up"
                 data-aos-duration="1500" data-aos-delay="200">
-            <img src="img\assets\clothes\8.png" alt="" class="md:w-52 max-md:w-36" data-aos="zoom-in-up"
+            <img loading="lazy" src="img\assets\clothes\8.png" alt="" class="md:w-52 max-md:w-36" data-aos="zoom-in-up"
                 data-aos-duration="1500" data-aos-delay="300">
-            <img src="img\assets\clothes\5.png" alt="" class="md:w-52 max-md:w-36" data-aos="zoom-in-up"
+            <img loading="lazy" src="img\assets\clothes\5.png" alt="" class="md:w-52 max-md:w-36" data-aos="zoom-in-up"
                 data-aos-duration="1500" data-aos-delay="400">
-            <img src="img\assets\clothes\6.png" alt="" class="md:w-52 max-md:w-36" data-aos="zoom-in-up"
+            <img loading="lazy" src="img\assets\clothes\6.png" alt="" class="md:w-52 max-md:w-36" data-aos="zoom-in-up"
                 data-aos-duration="1500" data-aos-delay="500">
-            <img src="img\assets\clothes\2.png" alt="" class="md:w-52 max-md:w-36" data-aos="zoom-in-up"
+            <img loading="lazy" src="img\assets\clothes\2.png" alt="" class="md:w-52 max-md:w-36" data-aos="zoom-in-up"
                 data-aos-duration="1500" data-aos-delay="600">
-            <img src="img\assets\clothes\4.png" alt="" class="md:w-52 max-md:w-36" data-aos="zoom-in-up"
+            <img loading="lazy" src="img\assets\clothes\4.png" alt="" class="md:w-52 max-md:w-36" data-aos="zoom-in-up"
                 data-aos-duration="1500" data-aos-delay="700">
         </div>
     </section>
@@ -127,30 +130,35 @@
             <div class="flex justify-center md:p-10 max-md:p-16 max-md:pt-0 gap-0 max-md:flex-col max-md:items-center">
                 <div class="flex flex-col md:w-[25%] max-md:w-full gap-1 items-center text-center" data-aos="fade-in"
                     data-aos-duration="2000" data-aos-delay="300">
-                    <img src="img\assets\gifts\9.png" alt="" class="rounded-2xl max-md:w-1/2">
+                    <img loading="lazy" src="img\assets\gifts\9.png" alt="" class="rounded-2xl max-md:w-1/2">
                     <span class="font-extrabold text-lg">Learning Books</span>
                 </div>
                 <div class="flex flex-col md:w-[25%] max-md:w-full gap-1 items-center text-center" data-aos="fade-in"
                     data-aos-duration="2000" data-aos-delay="600">
-                    <img src="img/assets/gifts/10.png" alt="" class="rounded-2xl max-md:w-1/2">
+                    <img loading="lazy" src="img/assets/gifts/10.png" alt="" class="rounded-2xl max-md:w-1/2">
                     <span class="font-extrabold text-lg">Educational Toys</span>
                 </div>
                 <div class="flex flex-col md:w-[25%] max-md:w-full gap-1 items-center text-center" data-aos="fade-in"
                     data-aos-duration="2000" data-aos-delay="900">
-                    <img src="img/assets/gifts/11.png" alt="" class="rounded-2xl max-md:w-1/2">
+                    <img loading="lazy" src="img/assets/gifts/11.png" alt="" class="rounded-2xl max-md:w-1/2">
                     <span class="font-extrabold text-lg">Clothers for 12 months up</span>
                 </div>
                 <div class="flex flex-col md:w-[25%] max-md:w-full gap-1 items-center text-center" data-aos="fade-in"
                     data-aos-duration="2000" data-aos-delay="900">
-                    <img src="img/assets/gifts/12.png" alt="" class="rounded-2xl max-md:w-1/2">
-                    <span class="font-extrabold text-lg">MONETARY GIFT</span>
+                    <img loading="lazy" src="img/assets/gifts/12.png" alt="" class="rounded-2xl max-md:w-1/2">
+                    <span class="font-extrabold text-lg">Monetary Gift</span>
                 </div>
             </div>
         </div>
         <div
             class="lg:bg-[url('../img/section2.jpg')] lg:bg-cover lg:bg-center h-full max-lg:flex max-lg:justify-center max-lg:p-10  max-lg:order-1">
-            <img src="img/section2.jpg" alt="" class="z-20 lg:hidden max-lg:block bg-center w-96 rounded-2xl">
+            <img loading="lazy" src="img/section2.jpg" alt=""
+                class="z-20 lg:hidden max-lg:block bg-center w-96 rounded-2xl">
         </div>
+    </section>
+
+    <section
+        class="relative overflow-hidden bg-cover bg-center lg:h-screen max-lg:h-full grid lg:grid-cols-2 max-lg:grid-cols-1 justify-center items-center">
 
     </section>
 
