--- a/index.html
+++ b/index.html
@@ -127,7 +127,8 @@
                 Your prayers and presence are all that we request. But if you desire to give nonetheless, these are the
                 things that we would appreciate.
             </p>
-            <div class="flex justify-center md:p-10 max-md:p-16 max-md:pt-0 gap-0 max-md:flex-col max-md:items-center">
+            <div
+                class="flex justify-center md:p-10 max-md:p-16 max-md:pt-0 gap-5 max-md:gap-0 max-md:flex-col max-md:items-center">
                 <div class="flex flex-col md:w-[25%] max-md:w-full gap-1 items-center text-center" data-aos="fade-in"
                     data-aos-duration="2000" data-aos-delay="300">
                     <img loading="lazy" src="img\assets\gifts\9.png" alt="" class="rounded-2xl max-md:w-1/2">
